<resources>
    <string name="app_name">NoodleBar</string>
    <string name="gorillaz">gorillaz</string>
    <string name="gorillaz_show">/> gorillaz</string>
    <string name="noodle">Noodle</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="age_desc">age_desc</string>
    <string name="gender_desc">gender_desc</string>
    <string name="noodle_bar">/> The Noodle Bar</string>
    <string name="cya_tracker">Cya ...</string>
    <string name="todo">TODO</string>
    <string name="build_info"></string>
    <string name="select_gender">Select Gender</string>
    <string name="phone">Phone</string>
    <string name="update">Lucky me</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="device_info">Device Info</string>
    <string name="display_info">DISPLAY: </string>
    <string name="hardware_info">HARDWARE: </string>
    <string name="host_info">HOST: </string>
    <string name="model_info">MODEL: </string>
    <string name="user_info">USER: </string>
    <string name="device_desc">device_desc</string>
    <string name="display_desc">display_desc</string>
    <string name="hardware_desc">hardware_desc</string>
    <string name="host_desc">host_desc</string>
    <string name="model_desc">model_desc</string>
    <string name="user_desc">user_desc</string>
    <string name="title_activity_permission_rational">Permission Rational</string>
    <string name="main_message_activity_permission_rational">Track activity changes by letting us read your phone\'s activity transitions.</string>
    <string name="details_message_activity_permission_rational">This app\'s experience requires access to your phone\'s activity transitions to display changes from walking to standing still.</string>
    <string name="no_thanks_activity_permission_rational">No Thanks</string>
    <string name="continue_activity_permission_rational">Continue</string>
    <string name="enable_disable_button_activity_recognition">Activity Recognition</string>
    <string name="dunno">0,0</string>
    <string name="feet">0,0</string>
    <string name="bike">0,0</string>
    <string name="still">0,0</string>
    <string name="walking">0,0</string>
    <string name="vehicle">0,0</string>
    <string name="running">0,0</string>
    <string name="title_activity_maps">Map</string>
    <string name="lucky_profile">Lucky Profile</string>
    <string name="my_activity">My Activity</string>
    <string name="pi_ratings">pi-Ratings</string>
    <string name="activity_type">Activity Type</string>
    <string name="confidence">Confidence</string>
    <string name="running_info">running</string>
    <string name="in_vehicle_info">in_vehicle</string>
    <string name="walking_info">walking</string>
    <string name="still_info">still</string>
    <string name="on_bicycle_info">on_bicycle</string>
    <string name="on_foot_info">on_foot</string>
    <string name="unknown_info">unknown</string>
    <string name="track_my_activity">Track my Activity</string>
    <string name="location_base_info">Location base Info</string>
    <string name="select_activity">Select Activity</string>
</resources>