<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MyActivity"
    android:background="#beb1bd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/icons8_squared_menu_64"
                android:onClick="toggleMenu"
                android:contentDescription="@string/todo"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#beb1bd">

            <ImageView
                android:id="@+id/device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/icons8_code_fork_64"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/activity_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/device"
                android:layout_toRightOf="@+id/device"
                android:layout_centerInParent="true"
                android:fontFamily="@font/aldrich"
                android:includeFontPadding="true"
                android:padding="5dp"
                android:text="@string/track_my_activity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                tools:ignore="UselessParent">

                <ToggleButton
                    android:id="@+id/toggleActivity"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:checked="false"
                    android:textSize="14sp"
                    android:contentDescription="@string/todo"
                    android:disabledAlpha="@integer/google_play_services_version"/>

                <TextView
                    android:id="@+id/title_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toEndOf="@+id/toggleActivity"
                    android:layout_toRightOf="@+id/toggleActivity"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/enable_disable_button_activity_recognition"
                    android:textSize="18sp"
                    />
            </RelativeLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >
            <RelativeLayout
                android:id="@+id/activity_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:ignore="UselessParent"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/activity_type"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/conf_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/activity"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/activity"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/confidence"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"

                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/activity"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/running_info"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/running_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/conf_level"
                    android:layout_toEndOf="@+id/running"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/running"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:textAlignment="textEnd"
                    android:text="@string/running"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/running"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/in_vehicle_info"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/vehicle_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/running_conf"
                    android:layout_toEndOf="@+id/vehicle"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/vehicle"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/vehicle"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/walking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vehicle"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/walking_info"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/walking_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vehicle_conf"
                    android:layout_toEndOf="@+id/walking"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/walking"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/walking"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/still"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/walking"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/still_info"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/still_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/walking_conf"
                    android:layout_toEndOf="@+id/still"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/still"
                    android:layout_alignParentRight="true"
                    android:text="@string/still"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/bike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/still"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/on_bicycle_info"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/bike_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/still_conf"
                    android:layout_toEndOf="@+id/bike"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/bike"
                    android:layout_alignParentRight="true"
                    android:text="@string/bike"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/foot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bike"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/on_foot_info"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/foot_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bike_conf"
                    android:layout_toEndOf="@+id/foot"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/foot"
                    android:layout_alignParentRight="true"
                    android:text="@string/feet"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/foot"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:text="@string/unknown_info"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/unknown_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/foot_conf"
                    android:layout_toEndOf="@+id/unknown"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/unknown"
                    android:layout_alignParentRight="true"
                    android:text="@string/dunno"
                    android:fontFamily="@font/aldrich"
                    android:includeFontPadding="true"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>