<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#beb1bd"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/icons8_squared_menu_64"
                android:onClick="toggleMenu" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:src="@mipmap/profile_image" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/profile_image"
                android:layout_toRightOf="@+id/profile_image"
                android:fontFamily="@font/aldrich"
                android:includeFontPadding="false"
                android:text="@string/noodle"
                android:textColor="@android:color/secondary_text_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:layout_toRightOf="@+id/profile_image"
                android:fontFamily="@font/bad_script"
                android:includeFontPadding="false"
                android:text="@string/gorillaz"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#beb1bd"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/icon_push_pin"

                        android:contentDescription="@string/todo"/>

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/aldrich"
                        android:includeFontPadding="false"
                        android:text="@string/age"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/age_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/age"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/aldrich"
                        android:includeFontPadding="false"
                        android:text="@string/age_desc"
                        android:textSize="14sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#beb1bd"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/icon_push_pin"
                        android:contentDescription="@string/todo"></ImageView>

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/aldrich"
                        android:includeFontPadding="false"
                        android:text="@string/gender"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/gender_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/gender"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/aldrich"
                        android:includeFontPadding="false"
                        android:text="@string/gender_desc"
                        android:textSize="14sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aldrich"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:startIconTint="@null"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/icons8_customer_64"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aldrich"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                android:hint="Select age range"
                app:endIconMode="dropdown_menu"
                app:startIconDrawable="@drawable/icon_age"
                app:startIconTint="@null"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:textColor="@android:color/secondary_text_light"
                    android:enabled="false"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aldrich"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                android:hint="@string/select_gender"
                app:endIconMode="dropdown_menu"
                app:startIconDrawable="@mipmap/icons8_unisex_64"
                app:startIconTint="@null"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:textColor="@android:color/secondary_text_light"
                    android:enabled="false"
                    android:inputType="none"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aldrich"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@mipmap/icons8_email_64"
                app:startIconTint="@null"
                android:hint="@string/e_mail">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aldrich"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@mipmap/icons8_phone_64"
                app:startIconTint="@null"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/profile_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#beb1bd"
                android:fontFamily="@font/aldrich"
                android:text="@string/update"
                android:textColor="@android:color/secondary_text_light"
                app:backgroundTint="#beb1bd" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>